<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_dark_gray"
    android:orientation="vertical">

    <TextView
        style="@style/Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in" />

    <EditText
        android:id="@id/etEmail"
        style="@style/Auth.Edit.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@id/etPassword"
        style="@style/Auth.Edit.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <TextView
        android:id="@id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/margin8"
        android:layout_marginEnd="@dimen/margin40"
        android:text="@string/forgot_password"
        android:textColor="@color/gray" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btnLogin"
        style="@style/Auth.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:padding="@dimen/margin12"
        android:text="@string/login" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btnGoogle"
        style="@style/Auth.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/black"
        app:icon="@drawable/ic_google" />

    <com.google.android.material.button.MaterialButton
        android:id="@id/btnFacebook"
        style="@style/Auth.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_facebook"
        android:text="@string/sign_in_with_facebook"
        app:icon="@drawable/ic_facebook" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnRegistration"
        style="@style/Base.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin12"
        android:text="@string/registration" />

</LinearLayout>