<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_dark_gray"
    android:orientation="vertical">

    <TextView
        style="@style/Title.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/Auth.Edit.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin20"
        android:drawableStart="@drawable/ic_user"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/Auth.Edit.Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin8"
        android:drawableStart="@drawable/ic_password"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnReg"
        style="@style/Auth.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:padding="@dimen/margin12"
        android:text="@string/registration" />

</LinearLayout>