<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/margin40"
    android:background="@color/main_dark_gray"
    android:orientation="horizontal">

    <ImageView
        android:id="@id/ivImage"
        android:layout_width="160dp"
        android:layout_height="240dp"
        android:scaleType="centerCrop"
        android:src="@color/purple_200"
        android:contentDescription="@string/image" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@id/tvTitle"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin40"
            android:maxLines="3"
            android:textColor="@color/white"
            android:textSize="@dimen/big_title_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@id/tvPrice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toTopOf="@id/btnBuy"
            app:layout_constraintStart_toStartOf="@id/tvTitle" />

        <TextView
            android:id="@id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin4"
            android:textColor="@color/red"
            android:textSize="@dimen/title_size"
            app:layout_constraintBottom_toBottomOf="@id/tvPrice"
            app:layout_constraintStart_toEndOf="@id/tvPrice" />

        <com.google.android.material.button.MaterialButton
            android:id="@id/btnBuy"
            style="@style/Base.Button"
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/zero"
            android:backgroundTint="@color/red"
            android:text="@string/buy"
            android:textColor="@color/white"
            app:icon="@drawable/ic_buy"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/tvPrice" />

        <ImageView
            android:id="@id/ivFavorite"
            android:layout_width="@dimen/favorite_size"
            android:layout_height="@dimen/favorite_size"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_favorite"
            app:layout_constraintBottom_toTopOf="@id/tvPrice"
            app:layout_constraintStart_toStartOf="@id/tvPrice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>